tests/cases/compiler-development/artifact/errors/diagnostic-match-runtime-owned-enum-payload-undropped.diagnostic
diagnostic error code=O0001 family=ownership message="owning binding 'token' must be moved or dropped before return" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/match/errors/match-runtime-owned-enum-payload-undropped.ari" display="tests/cases/match/errors/match-runtime-owned-enum-payload-undropped.ari" bytes=467
  Label index=0 role=primary source_id=0 source="tests/cases/match/errors/match-runtime-owned-enum-payload-undropped.ari" line=26 column=14 end_line=26 end_column=15 byte_start=360 byte_end=361 message=""
  Snippet label=0 text="  --> tests/cases/match/errors/match-runtime-owned-enum-payload-undropped.ari:26:14\n    |\n 26 |       return 1;\n    |              ^"
